# udisks-monitor

./: .gitignore  AGENTS.md  CHANGELOG.md  README.md  default.nix  flake.nix  pyproject.toml
.github/workflows/: publish.yml  test.yml
docs/: 01-overview.md  02-output-structure.md  03-event-types.md  04-job-lifecycle.md  05-property-changes.md  06-loop-devices.md  07-interface-changes.md  08-parsing-output.md  09-integration-patterns.md  10-troubleshooting.md  11-manual-testing.md  12-agent-tools.md  index.md
tests/: after_stress.py  arch1_verify.py  arch2_verify.py  before_stress.py  ci_diag.py  ci_failing_tests.py  ci_isolation_test.py  ci_root_cause_test.py  dbus_next_parity.py  dbus_next_stress.py  diagnostic_test_burst.py  h1_test.py  h2_test.py  h3_test.py  h4_test.py  h5_test.py  ia_delay_test.py  ia_timing_test.py  one_parity_10x.py  parity_dbus_only.py  parity_single_monitor.py  parity_subprocess_only.py  py14_env_diff_test.py  py14_env_test.py  py14_join_test.py  py14_minimal_test.py  py14_subprocess_only.py  py14_udisks_test.py  queue_stress.py  repeat_10x.py  retest_10x.py  retest_dbus.py  retest_final.py  signal_dump_test.py  sol1_verify.py  sol2_verify.py  sol3_verify.py  stress_dbus_next.py  stress_test_dbus.py  stress_udisks_dbus.py  (+7 more)
tests/integration/: helpers.py  test_backend_parity.py  test_dbus_signals.py  test_events.py  test_startup.py  test_subscribers.py  test_zz_backend_parity.py  (+2 more)
tools/: analyze_monitor.py  capture_monitor.py  inspect_regex.py  stress_monitor.py
udisks_monitor/: __init__.py  _events.py  _monitor.py  _parser.py  _pubsub.py
(+5 files in other folders)
