[build-system]
requires = ["setuptools>=64"]
build-backend = "setuptools.build_meta"

[project]
name = "udisks-monitor"
version = "0.1.0"
description = "Event-driven pub/sub wrapper around udisksctl monitor (Linux)"
readme = "README.md"
license = "GPL-3.0-only"
requires-python = ">=3.10"
dependencies = []
classifiers = [
    "Development Status :: 4 - Beta",
    "Environment :: Console",
    "Intended Audience :: Developers",
    "Operating System :: POSIX :: Linux",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Programming Language :: Python :: 3.14",
    "Topic :: System :: Filesystems",
    "Topic :: Software Development :: Libraries :: Python Modules",
]

[project.urls]
Homepage = "https://github.com/MBanucu/udisks-monitor"
Repository = "https://github.com/MBanucu/udisks-monitor"

[tool.setuptools.packages.find]
where = ["."]
include = ["udisks_monitor*"]
